<resources>
    <string name="app_name">Popular Movies</string>
    <string name="empty_list_no_connection">No movie retrieved, please check your internet connection</string>
    <string name="empty_list">No movie available in this category</string>
    <string name="try_again">Try again</string>
    <string name="fetch_fail">Movies list could not be fetched</string>
    <string name="drawer_open">Navigation drawer opened</string>
    <string name="drawer_closed">Navigation drawer closed</string>
    <string name="movies_category">Categories</string>
    <string name="original_title">Original title: </string>
    <string name="release_date">Release date: </string>
    <string name="rating">Rating: </string>
    <string name="movie_poster">Movie Poster</string>
    <string name="trailers">Trailers</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="rating_text">%.2f of 10 (%d votes)</string>
    <string name="movie_favorited">Movie marked as favorite</string>
    <string name="movie_unfavorited">Movie removed from favorites</string>
    <string name="favorite_item_value">favorited</string>

    <string-array name="navigation_drawer_list">
        <item>Popular Movies</item>
        <item>Top Rated Movies</item>
        <item>Now Playing Movies</item>
        <item>Upcoming Movies</item>
        <item>Favorite Movies</item>
    </string-array>

    <string-array name="navigation_drawer_list_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>now_playing</item>
        <item>upcoming</item>
        <item>@string/favorite_item_value</item>
    </string-array>

</resources>
