<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guskuma.popularmovies.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_text_vertical"
            android:layout_marginLeft="@dimen/between_text_vertical"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_favorite"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lorem Ipsum Dolor" />

        <TextView
            android:id="@+id/tv_movie_overview"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
            app:layout_constraintLeft_toLeftOf="@id/iv_favorite"
            android:layout_marginTop="@dimen/between_text_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
            app:layout_constraintLeft_toLeftOf="@id/tv_movie_overview"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="157dp"
            android:layout_height="236dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/lbl_movie_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="@string/original_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_movie_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/lbl_movie_original_title"
            tools:text="Lorem Ipsum Dolor" />

        <TextView
            android:id="@+id/lbl_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/between_text_vertical"
            android:text="@string/rating"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_original_title" />

        <TextView
            android:id="@+id/tv_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_original_title"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/lbl_movie_rating"
            tools:text="7.7 of 10 (1000 votes)" />

        <TextView
            android:id="@+id/lbl_movie_release_date"
            android:text="@string/release_date"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/between_text_vertical"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_rating"/>

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_rating"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/lbl_movie_release_date"
            tools:text="2017-10-25" />

        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/trailers"
            android:textStyle="bold"
            android:visibility="gone"/>

        <HorizontalScrollView
            android:id="@+id/sv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_text_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_trailers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/ll_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/sv_trailers"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/reviews"
            android:textStyle="bold"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/between_text_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
